--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         tools:targetApi="31">
         <activity
             android:name=".user.LoginActivity"
+            android:parentActivityName=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,11 +22,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-<!--        <activity-->
-<!--            android:name="com.dex.engrisk.user.LoginActivity"-->
-<!--            android:parentActivityName=".MainActivity"-->
-<!--            android:exported="false" />-->
 
         <activity
             android:name="com.dex.engrisk.user.RegisterActivity"
